--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -46,7 +46,7 @@ body {
         text-indent: 30px;
       }
     }
-    & .keword {
+    & .keyword {
       background: none;
     }
   }
@@ -69,7 +69,7 @@ body {
   }
 }
 
-.keword-contents {
+.keyword-contents {
   text-align: left;
   margin: 0 auto;
   padding: 15px 0;
@@ -78,17 +78,17 @@ body {
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(92, 92, 92, 0.51);
   box-shadow: 0px 0px 10px 0px rgba(92, 92, 92, 0.51);
-  & .keword-none {
+  & .keyword-none {
     padding: 20px;
     font-size: 16px;
   }
-  & .keword-sub-title {
+  & .keyword-sub-title {
     padding: 15px 20px;
     color: #73777b;
   }
-  & .keword-list {
+  & .keyword-list {
     padding: 0 20px;
-    & .keword-item {
+    & .keyword-item {
       display: flex;
       align-items: center;
       font-size: 16px;
