--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -88,6 +88,7 @@ body {
   }
   & .keyword-list {
     & .keyword-item {
+      cursor: grab;
       display: flex;
       align-items: center;
       font-size: 16px;
