style: word-break

--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -87,12 +87,16 @@ body {
     color: #73777b;
   }
   & .keyword-list {
+    display: inline-block;
+    overflow: hidden;
+
     & .keyword-item {
       display: flex;
       align-items: center;
       font-size: 16px;
       padding: 15px;
       margin-bottom: 15px;
+      word-break: break-all;
       & .search-icon {
         margin-right: 10px;
         width: 15px;
